<resources>
    <string name="app_name">Turistic</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">rrl0PryJP5cNDS25ZrCX4fZiA1g5DMyLnyjT5sCq</string>
    <string name="back4app_client_key">6UlZPSfPsAFqdZgiHTdBFU547oDSM8j9pjh8uhCA</string>
    <string name="log_out">Log Out</string>
    <string name="compose">Compose</string>
    <string name="logo">Logo</string>
    <string name="confirm_password">confirm password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="take_picture">Take picture</string>
    <string name="submit_pictures">Submit pictures</string>
    <string name="image_to_post">Image to Post</string>
    <string name="caption">Caption</string>
    <string name="post">Post</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="post_of_the_picture">Post of the Picture</string>
    <string name="example_caption">Example Caption</string>
    <string name="save">Save</string>
    <string name="privacy_mode">Privacy Mode:</string>
    <string name="rating">Rating</string>
    <string-array name="privacyMode">
        <item>Choose a Privacy Mode</item>
        <item>Public</item>
        <item>Followers Only</item>
        <item>Friends Only</item>
        <item>Private</item>
    </string-array>
    <string-array name="anyoneCanFollow">
        <item>Anyone can follow you?</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="facebook_app_id">1189869938475313</string>
    <string name="fb_login_protocol_scheme">fb1189869938475313</string>
    <string name="facebook_client_token">9ab9a8529d891df9d2c66da5b16de1f6</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="anyone_can_follow">Anyone can follow you?</string>
    <string name="channel_name">Turistic Notification</string>
    <string name="channel_description">Notifications for the Turistic App</string>
    <string name="FollowStatus1">Followed</string>
    <string name="FollowStatus2">Follow</string>
    <string name="user_posts_are_private">User Posts are Private</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="discover">Discover</string>
</resources>