<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">

    <EditText
        android:id="@+id/etComposeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/title"
        android:inputType="text"
        android:autofillHints=""
        />

    <LinearLayout
        android:id="@+id/llCompose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/etComposeTitle">

        <Button
            android:id="@+id/btnComposeTakePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/take_picture"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnComposeSubmitPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/submit_pictures"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivComposePictureToPost"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image_to_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCompose"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etComposeCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComposePictureToPost"
        android:hint="@string/caption"
        android:autofillHints=""
        android:minLines="5"
        />
    <Button
        android:id="@+id/btnComposeSubmitPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/post"
        app:layout_constraintTop_toBottomOf="@id/etComposeCaption"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
