<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".EditUserInformationActivity">

    <ImageView
        android:id="@+id/ivEditProfilePicture"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="100dp"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="text"
                android:minHeight="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:autofillHints=""
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/privacy_mode" />

        <Spinner
            android:id="@+id/spnEditPrivacyMode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/back4app_client_key"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvEditAnyoneCanFollow"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/anyone_can_follow"/>

        <Spinner
            android:id="@+id/spnEditFollowingMode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/anyone_can_follow"
            android:spinnerMode="dropdown"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnEditSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/save" />

</LinearLayout>