<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:autoLink="web"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/user_profile_picture"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivPostPicture"
        android:layout_below="@+id/tvUsername"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@+id/ivProfilePicture"
        tools:text="Example Title" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostPicture"
        android:layout_marginStart="4dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/ivProfilePicture"
        android:text="@string/example_caption" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/ivProfilePicture"
        android:textColor="#546E7A"
        tools:text=".@User" />

    <TextView
        android:id="@+id/tvRelativeTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="258dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:layout_toEndOf="@+id/ivProfilePicture"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/ivPostPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfilePicture"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/ivProfilePicture"
        android:contentDescription="@string/post_of_the_picture"
        android:visibility="visible"
        tools:srcCompat="@tools:sample/avatars" />
</RelativeLayout>